# g4vg

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md
.github/workflows/: build-full.yml  pr.yml  push.yml
cmake/: CgvFindVersion.cmake  CudaRdcUtils.cmake  FindGeant4.cmake  FindVecGeom.cmake  G4VGConfig.cmake.in
scripts/: spack.yaml
scripts/cmake-presets/: ci-rocky-cuda.json  ci-ubuntu-cuda.json  excecutor.json  goldfinger.json
scripts/release/: users.json
src/: CMakeLists.txt  G4VG.cc  G4VG.hh
src/g4vg/: Converter.cc  Converter.hh  LogicalVolumeConverter.cc  LogicalVolumeConverter.hh  Scaler.hh  SolidConverter.cc
src/g4vg_impl/: Assert.cc  Assert.hh  CeleritasUtils.hh  Converter.cc  Converter.hh  GDMLUtils.hh  Logger.hh  LogicalVolumeConverter.cc  LogicalVolumeConverter.hh  PrintableLV.hh  Scaler.hh  SolidConverter.cc  SolidConverter.hh  Transformer.hh  TypeDemangler.hh
test/: CMakeLists.txt  Custom.test.cc  G4VG.link.test.cc  G4VG.test.cc  Gdml.test.cc  ICRP110PhantomNestedParameterisation.cc  ICRP110PhantomNestedParameterisation.hh  LoadGdml.hh  NestedReplicaParametrization.test.cc  Repr.hh  TestBase.cc  TestBase.hh  VoxelTestBase.test.cc  g4vg_test_config.h.in
test/data/: B5.gdml  cms-ee-back-dee.gdml  cms-me11.gdml  multi-level.gdml
